# libopenrazer

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  libopenrazer.h  meson.build  meson_options.txt
.builds/: alpine.yml  freebsd.yml
.github/workflows/: macos.yml  reuse.yaml
docs/: .gitignore  Doxyfile
include/: libopenrazer.h
include/libopenrazer/: capability.h  dbusexception.h  device.h  led.h  manager.h  misc.h  openrazer.h  razercapability.h
src/: capability.cpp  dbusexception.cpp  device.cpp  led.cpp  libopenrazer.cpp  libopenrazer_private.h  manager.cpp  misc.cpp  razercapability.cpp
src/demo/: libopenrazerdemo.cpp
src/openrazer/: device.cpp  device_p.h  led.cpp  led_p.h  manager.cpp  manager_p.h
src/razer_test/: device.cpp  device_p.h  led.cpp  led_p.h  manager.cpp  manager_p.h
translations/: libopenrazer_de.ts  libopenrazer_eo.ts  libopenrazer_nl.ts  meson.build
